--- a/docker-compose/heimdall.yml
+++ b/docker-compose/heimdall.yml
@@ -1,1 +1,15 @@
-
+version: "2.1"
+services:
+  heimdall:
+    image: lscr.io/linuxserver/heimdall
+    container_name: heimdall
+    environment:
+      - PUID=998
+      - PGID=1000
+      - TZ=America/Toronto
+    volumes:
+      - /srv/dev-disk-by-uuid-252F2A345FFE7075/var/lib/heimdall:/config
+    ports:
+      - 6941:80
+      - 443:443
+    restart: unless-stopped
